<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activity.DetailRoseActivity">

    <include
        android:id="@+id/appBarRoseDetail"
        layout="@layout/custom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_below="@id/appBarRoseDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivRoseDetail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/black_color"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvRoseDetailLabel"
                style="@style/TextViewItem.black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ivRoseDetail"
                android:layout_marginTop="@dimen/activity_top_margin_16dp"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:textSize="18sp"
                android:text="@string/desc" />

            <TextView
                android:id="@+id/tvRoseDetail"
                style="@style/TextViewItem.red.dark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tvRoseDetailLabel"
                android:justificationMode="inter_word"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                tools:ignore="UnusedAttribute"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/tvRoseColorDetailLabel"
                style="@style/TextViewItem.black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tvRoseDetail"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:text="@string/accent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvRoseColorDetail"
                style="@style/TextViewItem.red.dark"
                android:layout_below="@id/tvRoseColorDetailLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                tools:text="@string/dummy_color"
                tools:ignore="UnusedAttribute" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>